[tool.poetry]
name = "mbajk-api"
version = "0.1.0"
description = ""
authors = ["Tine Šuster <tine.suster@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.1"
jupyter = "^1.0.0"
matplotlib = "^3.8.3"
scipy = "^1.12.0"
scikit-learn = "^1.4.1.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
